argo/ingress/templates/default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8085
      - path: /es
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
